--- a/AutoBaloo/appsettings.json
+++ b/AutoBaloo/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaulConnectionString": "Data Source=LAPTOP-JOC07JFG;Initial Catalog=AutoBaloo;Integrated Security=True;Pooling=False"
+  },
+
   "AllowedHosts": "*"
 }
