--- a/AutoBaloo/appsettings.json
+++ b/AutoBaloo/appsettings.json
@@ -8,7 +8,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaulConnectionString": "Data Source=LAPTOP-JOC07JFG;Initial Catalog=AutoBaloo;Integrated Security=True;Pooling=False"
+    "DefaulConnectionString": "Data Source=LAPTOP-8P4KOSIK\\SQLEXPRESS;Initial Catalog=autobaloo;Integrated Security=True;Pooling=False"
   },
 
   "AllowedHosts": "*"
