--- a/AutoBaloo/appsettings.json
+++ b/AutoBaloo/appsettings.json
@@ -11,5 +11,6 @@
     "DefaulConnectionString": "Data Source=LAPTOP-8P4KOSIK\\SQLEXPRESS;Initial Catalog=autobaloo;Integrated Security=True;Pooling=False"
   },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "NotificationProvider": "toastr"
 }
